--- a/css/icons.css
+++ b/css/icons.css
@@ -100,6 +100,7 @@ i[class^="clients-"]{
 .clients-wayfong				{ background-position: -480px -200px;}
 .clients-allianz				{ background-position: 0px -300px;}
 .clients-cooler-master			{ background-position: -120px -300px;}
+.clients-yamaha-motors			{ background-position: -180px -300px;}
 @media only screen{
 }
 
