--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,93 @@
 	Author: 劉政皇
 	yisenliu@gmail.com
   ------------------------------------------------------------------------*/
+
+/*-----------------------------------------------------------------------
+   Based on BlueTrip CSS Framework
+   Mike Crittenden
+   mike@capsizedesigns.com
+   License - MIT or GPL (whichever suits you better)
+----------------------------------------------------------------------- */
+/* MASS RESET */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size:100%;
+	font-weight: inherit;
+	font-style: normal;
+	vertical-align:baseline;
+	background:transparent;
+}
+img{
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size:100%;
+	/*vertical-align:baseline;取消本行可避免HTML編輯器插入圖片時，在IE下無法靠右對齊*/
+	background:transparent;
+}
+ol, ul {list-style: none;}
+body {line-height:1;}
+blockquote,q{quotes:none}
+blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
+ins{text-decoration:none}
+del{text-decoration:line-through}
+table {border-collapse: collapse; border-spacing: 0;}
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0
+}
+
+/* HTML5 elements */
+article,aside,audio,canvas,command,datalist,details,embed,figcation,figure,footer,header,hgroup,keygen,mark,menu,meter,nav,output,progress,rp,rt,ruby,section,source,summary,time,video,wbr{
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size:100%;
+	font-weight: inherit;
+	font-style: normal;
+	vertical-align:baseline;
+	background:transparent;
+}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {     display:block;}
+:focus { outline: 0; }
+a:hover, a:active { outline: none; }
+
+
+/* ----- Font Face ----- */
+@font-face {
+	font-family: Neuton;
+	font-style: normal;
+	font-weight: 400;
+	src: url(../webfonts/cVNn68S7F5XDg8YilesTjA.eot);
+	src: local('Neuton Regular'), local('Neuton-Regular'), url(../webfonts/cVNn68S7F5XDg8YilesTjA.eot) format('embedded-opentype'), url(../webfonts/FWmpGWvJ4R8gbr0i3io5KQ.woff) format('woff');
+}
+@font-face {
+	font-family: Neuton;
+	font-style: normal;
+	font-weight: 700;
+	src: url(../webfonts/MK-qWv3o5LiGs6rxlk2eu_Y6323mHUZFJMgTvxaG2iE.eot);
+	src: local('Neuton Bold'), local('Neuton-Bold'), url(../webfonts/MK-qWv3o5LiGs6rxlk2eu_Y6323mHUZFJMgTvxaG2iE.eot) format('embedded-opentype'), url(../webfonts/MK-qWv3o5LiGs6rxlk2euz8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
+@font-face {
+	font-family: 'Fredericka the Great';
+	font-style: normal;
+	font-weight: 400;
+	src: url(../webfonts/7Es8Lxoku-e5eOZWpxw18kLzRiPHQLkuFZv2gk0ljvI.eot);
+	src: local('Fredericka the Great'), local('FrederickatheGreat'), url(../webfonts/7Es8Lxoku-e5eOZWpxw18kLzRiPHQLkuFZv2gk0ljvI.eot) format('embedded-opentype'), url(../webfonts/7Es8Lxoku-e5eOZWpxw18vc3vBAn7YvtW9hNjxWZBR0.woff) format('woff');
+}
+@font-face {
+	font-family: 'Fjalla One';
+	font-style: normal;
+	font-weight: 400;
+	src: url(../webfonts/rxxXUYj4oZ6Q5oDJFtEd6lQlYEbsez9cZjKsNMjLOwM.eot);
+	src: local('Fjalla One'), local('FjallaOne-Regular'), url(../webfonts/rxxXUYj4oZ6Q5oDJFtEd6lQlYEbsez9cZjKsNMjLOwM.eot) format('embedded-opentype'), url(../webfonts/rxxXUYj4oZ6Q5oDJFtEd6hsxEYwM7FgeyaSgU71cLG0.woff) format('woff');
+}
+
 html { }
 body {
 	-moz-text-size-adjust: 100%;
