--- a/css/mqbp3.css
+++ b/css/mqbp3.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
  *  Copyright: 劉政皇
  *  Author: 劉政皇
  *  yisenliu@gmail.com
@@ -445,7 +445,6 @@
 .worksDiv .thumb img{
   -webkit-filter: grayscale(100%);
   -webkit-transform: translateZ(0);/*解决 -webkit-filter: grayscale(100%) 在 retina 下的模糊问题*/
-  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
   filter: gray; /*IE6-9 */
   -webkit-transition: all 0.5s ease 0s;
   -moz-transition: all 0.5s ease 0s;
